refactor: rename session repository method and migrate stream collection to Stream.toList()